Fixed the aligning of multiple choice filters

--- a/assets/css/easyadmin-theme/datagrids.scss
+++ b/assets/css/easyadmin-theme/datagrids.scss
@@ -214,3 +214,9 @@ table.datagrid {
 .filter-content .form-group label.required:after {
     content: none;
 }
+.filter-content .field-choice .form-check + .form-check {
+    margin-top: 4px;
+}
+.filter-content .field-choice .form-check-label {
+    margin-top: 0;
+}
